--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,35 @@
 body {
     background-color: #434558;
     color: #E6DDA1;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Playfair', serif;
+    font-family: 'Varela Round', sans-serif;
 }
 .heading {
     background-color: #B4715B;
+    text-align: center;
+    padding: 20px;
+}
+.form {
+    display: block;
+    text-align: center;
+}
+form {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    text-align: left;
+    border: 2px solid black;
+    padding: 20px;
+    background-color: #434558;
+}
+.styleBtn {
+    text-align: center;
+}
+.end {
+    text-align: center;
+}
+.hidden {
+    display:none;
 }
